chore: minor code fixup